# cmake_test_proj

./: CMakeLists.txt  README.md  getopt_demo.c  getopt_demo.h
lib/: CMakeLists.txt  lib1.c  lib1.h
tools/: CMakeLists.txt  tool1.c  tool1.h
